# ZipperFixup

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  build.rs  dcargo  dcargo-setup  docker-compose.yml  rust-toolchain  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: check.yaml  release.yaml
Misc/: InstallFixup.bat  readme.txt
code/: Cargo.toml
code/src/: lib.rs
crates/export-check/: Cargo.toml
crates/export-check/src/: main.rs
crates/loader/: Cargo.toml
crates/loader/src/: main.rs
crates/zipfixup/: Cargo.toml  build.rs  exports.def
crates/zipfixup/src/: dbg.rs  dll_main.rs  err_msg.c  err_msg.rs  exports.rs  hook.rs  lib.rs  mech3.rs  overrides.rs  recoil.rs
crates/zipfixup/src/patch/: byte.rs  call.rs  error.rs  mod.rs
crates/zippatch/: Cargo.toml
crates/zippatch/src/: main.rs  tests.rs
crates/zippatch/src/hash/: mod.rs  tests.rs
crates/zippatch/src/patch/: mod.rs
exports/: exports.c
misc/: InstallFixup.bat  Readme.txt
src/: dbg.rs  dll_main.rs  exports.c  exports.rs  forward_export.h  generic_fixup.c  generic_fixup.h  lib.rs  main.rs  mech3.rs  mech3_fixup.c  mech3_fixup.h  mech3fixup.c  mech3fixup.h  overrides.rs  patch.rs  recoil.rs  unused.h
