[package]
name = "zipfixup"
version = "0.1.2"
edition = "2021"
authors = [
    "Steve Lynch <eaterofpies@users.noreply.github.com>",
    "Toby Fleming <tobywf@users.noreply.github.com>",
]
description = "A project to fix some issues for some Zipper-related games"
readme = "README.md"
license = "GPLv3"
repository = "https://github.com/TerranMechworks/ZipperFixup"
publish = false

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "debugapi", "profileapi", "consoleapi"] }

[[bin]]
name = "patch"
path = "src/main.rs"

[lib]
name = "zipfixup"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"
