[package]
name = "zipfixup"
version = "0.1.2"

description = "A project to fix some issues for some Zipper-related games"
authors = [
    "Steve Lynch <eaterofpies@users.noreply.github.com>",
    "Toby Fleming <tobywf@users.noreply.github.com>",
]
repository = "https://github.com/TerranMechworks/ZipperFixup"
readme = "README.md"
license = "EUPL-1.2"

edition = "2024"
publish = false

[dependencies]
retour = "0.3.1"
region = "3.0.2"

[dependencies.winapi]
version = "0.3.9"
default-features = false
features = ["debugapi", "libloaderapi"]

[[bin]]
name = "patch"
path = "src/main.rs"

[lib]
name = "zipfixup"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"
