[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.2"

description = "A project to fix some issues for some Zipper-related games"
authors = [
    "Steve Lynch <eaterofpies@users.noreply.github.com>",
    "Toby Fleming <tobywf@users.noreply.github.com>",
]
repository = "https://github.com/TerranMechworks/ZipperFixup"
readme = "README.md"
license = "EUPL-1.2"

edition = "2024"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"
