[package]
name = "zipfixup"
version.workspace = true

description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

edition.workspace = true
publish.workspace = true

[lib]
name = "zipfixup"
crate-type = ["cdylib"]

[dependencies]
retour = "0.3.1"
region = "3.0.2"
time = "0.3"

[dependencies.winapi]
version = "0.3.9"
default-features = false
features = ["debugapi", "libloaderapi"]
