[package]
name = "zipfixup"
version.workspace = true

description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

edition.workspace = true
publish.workspace = true

[lib]
name = "zipfixup"
crate-type = ["cdylib"]

test = false

[dependencies]
retour = "0.3.1"
region = "3.0.2"

[dependencies.windows]
version = "0.62.0"
default-features = false
features = [
    "std",
    # OutputDebugStringA/OutputDebugStringW
    "Win32_System_Diagnostics_Debug",
    # DLL_PROCESS_ATTACH/DLL_PROCESS_DETACH
    "Win32_System_SystemServices",
    # GetCurrentThread/QueueUserAPC
    "Win32_System_Threading",
]

[build-dependencies]
cc = "1.2"
